objects/partdir_mp__Zone_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Field_values__c</fullName>
        <label>Field values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AccountBrand</fullName>
                    <label>Account Brand</label>
                </value>
                <value>
                    <fullName>partdir_mp__Partner_App__c</fullName>
                    <label>Partner App</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__Zone__c</fullName>
        <label>Zone</label>
        <referenceTo>partdir_mp__Partner_Zone__mdt</referenceTo>
        <relationshipLabel>Zones Filters</relationshipLabel>
        <relationshipName>Zones_Filters</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Zone Filter</label>
    <pluralLabel>Zones Filters</pluralLabel>
</CustomObject>